Fix sidebar scroll on mobile

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -154,10 +154,13 @@
 // I'll decide later
 .blur {
   overflow-y: hidden;
+  height: 100vh;
+  position: fixed;
 
   &::after {
     content: '';
     position: absolute;
+    height: 100%;
     inset: 0;
     background: transparent;
     backdrop-filter: blur(5px);
